@@ -1,4 +1,4 @@
-Copyright (C) 2002 Tom Gilbert.
+Copyright (C) 2002-2005 Tom Gilbert.
 
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to
