@@ -45,6 +45,8 @@ def debug(message=nil)
   #yield
 end
 
+orig_opts = ARGV.dup
+
 opts = GetoptLong.new(
   ["--debug", "-d", GetoptLong::NO_ARGUMENT],
   ["--help",  "-h", GetoptLong::NO_ARGUMENT],
@@ -80,7 +82,7 @@ if ($opts["help"])
   exit 0
 end
 
-if(bot = Irc::IrcBot.new(ARGV.shift))
+if(bot = Irc::IrcBot.new(ARGV.shift, :argv => orig_opts))
   # just run the bot
   bot.mainloop
 end
